--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -1,39 +1,34 @@
-provider "aws" {
-  region = var.aws_region
-}
+name: Provision EKS via Terraform
 
-module "vpc" {
-  source  = "terraform-aws-modules/vpc/aws"
-  version = "5.1.1"
+on:
+  workflow_dispatch:  # manual trigger
 
-  name = "arcgis-pe2-vpc"
-  cidr = "10.0.0.0/16"
+jobs:
+  terraform:
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
 
-  azs             = ["us-east-1a"]
-  public_subnets  = ["10.0.1.0/24"]
+    defaults:
+      run:
+        working-directory: terraform/aws
 
-  enable_nat_gateway = false
-  single_nat_gateway = false
-  enable_dns_hostnames = true
-}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-module "eks" {
-  source          = "terraform-aws-modules/eks/aws"
-  version         = "20.8.4"
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
 
-  cluster_name    = "arcgis-pe2-eks"
-  cluster_version = "1.29"
-  subnet_ids      = module.vpc.public_subnets
-  vpc_id          = module.vpc.vpc_id
+      - name: Terraform Init
+        run: terraform init
 
-  eks_managed_node_groups = {
-    default = {
-      min_size     = 1
-      max_size     = 1
-      desired_size = 1
+      - name: Terraform Plan
+        run: terraform plan
 
-      instance_types = ["t3.micro"]
-    }
-  }
-}
-
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
