--- a/.github/workflows/helm-deploy.yaml
+++ b/.github/workflows/helm-deploy.yaml
@@ -55,21 +55,42 @@ jobs:
         with:
           version: v3.13.3
 
+      - name: Lint Helm charts
+        run: |
+          helm lint ./helm/arcgis-portal
+          helm lint ./helm/arcgis-server
+
+
       - name: Deploy arcgis-portal (nginx)
         run: |
           helm upgrade --install arcgis-portal ./helm/arcgis-portal \
             --values ./overlays/${{ github.event.inputs.environment }}/values-portal.yaml \
             --namespace default \
             --create-namespace \
-
+            --atomic --timeout 5m
+     
       - name: Deploy arcgis-server (redis)
         run: |
           helm upgrade --install arcgis-server ./helm/arcgis-server \
             --values ./overlays/${{ github.event.inputs.environment }}/values-server.yaml \
             --namespace default \
-      
-      - name: Check pod health
+            --atomic --timeout 5m      
+    
+      - name: Show current pods and services
         run: |
-         echo "Waiting for pods to be healthy..."
-         kubectl rollout status deployment arcgis-portal --timeout=60s
+          kubectl get pods -o wide
+          kubectl get svc
+     
+
+      - name: Check pod health and rollout status
+        run: |
+          echo "Waiting for pods to be healthy..."
+          kubectl rollout status deployment arcgis-portal --timeout=60s
+          kubectl rollout status deployment arcgis-server --timeout=60s
+      
+      - name: Run Helm test for arcgis-portal
+        run: helm test arcgis-portal --namespace default --timeout 3m
+
+      - name: Run Helm test for arcgis-server
+        run: helm test arcgis-server --namespace default --timeout 3m
 
