--- a/helm/arcgis-portal/templates/service.yaml
+++ b/helm/arcgis-portal/templates/service.yaml
@@ -2,11 +2,17 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "arcgis-portal.fullname" . }}
+  labels:
+    app: arcgis-portal
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - name: http
+      port: {{ .Values.service.port }}
       targetPort: 80
+    - name: metrics
+      port: 9113
+      targetPort: metrics
   selector:
-    app: {{ include "arcgis-portal.name" . }}
+    app.kubernetes.io/name: arcgis-portal
 
