--- a/helm/arcgis-portal/templates/service.yaml
+++ b/helm/arcgis-portal/templates/service.yaml
@@ -12,7 +12,7 @@ spec:
       targetPort: 80
     - name: metrics
       port: 9113
-      targetPort: metrics
+      targetPort: 9113  # safer unless you're explicitly naming the port in deployment
   selector:
     app.kubernetes.io/name: arcgis-portal
 
