fix: test arcgis-portal with /status endpoint

--- a/helm/arcgis-portal/templates/tests/smoke-test.yaml
+++ b/helm/arcgis-portal/templates/tests/smoke-test.yaml
@@ -8,9 +8,6 @@ spec:
   containers:
     - name: curl
       image: curlimages/curl
-      command:
-        - curl
-        - --fail
-        - http://{{ include "arcgis-portal.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local
+      command: ["curl", "--fail", "http://{{ .Release.Name }}:80/status"]
   restartPolicy: Never
 
