--- a/helm/arcgis-portal/templates/service.yaml
+++ b/helm/arcgis-portal/templates/service.yaml
@@ -8,11 +8,11 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - name: http
-      port: {{ .Values.service.port }}
+      port: 80
       targetPort: 80
     - name: metrics
       port: 9113
-      targetPort: 9113  # safer unless you're explicitly naming the port in deployment
+      targetPort: 9113  
   selector:
     app.kubernetes.io/name: arcgis-portal
 
