adding configmap file

--- a/helm/arcgis-portal/templates/deployment.yaml
+++ b/helm/arcgis-portal/templates/deployment.yaml
@@ -1,3 +1,15 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: {{ include "arcgis-portal.fullname" . }}
+  labels:
+    app: arcgis-portal
+    app.kubernetes.io/name: arcgis-portal
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/component: web
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/version: "1.0"
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
