--- a/monitoring/servicemonitor-portal.yaml
+++ b/monitoring/servicemonitor-portal.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   selector:
     matchLabels:
+      monitoring: enabled
       app: arcgis-portal
   namespaceSelector:
     matchNames:
@@ -14,4 +15,4 @@ spec:
   endpoints:
     - port: metrics
       interval: 15s
-
+      path: /metrics
